--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ body {
 	color: #9d1953;
 }
 
+.c-default {
+	color: #fff;
+}
+
 .btn-custom {
 	background-color: #bd1c63;
 	padding: 12px 12px;
@@ -96,12 +100,6 @@ body {
 	margin-top: 4px;
 }
 
-.content-info {
-	height: 90vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 
 .content-welcome h1, .content-welcome h2 {
 	display: inline-block;
@@ -124,15 +122,14 @@ body {
 	margin-top: 15px;
 }
 
-.content-men {
+.content-men, .content-men-experience {
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 480px;
-	background-size: 100% 100%;
 	position: relative;
 }
 
-.content-men .content-btn {
+.content-men .content-btn, .content-men-experience .content-btn {
 	height: 100%;
 	display: flex;
 	justify-content: center;
@@ -140,24 +137,145 @@ body {
 	align-items: flex-end;
 }
 
-.content-men .content-btn .btn-details {
+.content-men .content-btn .btn-details, .content-men-experience .content-btn .btn-details {
 	margin-bottom: 120px;
+}
+
+.content-men .content-category, .content-men-experience .content-category {
+	display: flex;
+	align-items: center;
+	height: 100%;
+	justify-content: center;
+}
+
+.content-list {
+	padding: 5px;
+	width: 100%;
+}
+
+.content-list ul {
+	padding: 0;
+	list-style: none;
+}
+
+.content-list ul li {
+	color: #fff;
+	font-size: 13px;
+}
+
+.content-list ul li img {
+	width: 13px;
+	height: 13px;
+}
+
+.content-men .content-category .category, .content-men-experience .content-category .category {
+	font-size: 100px;
+	color: #fff;
+	text-transform: uppercase;
 }
 
 .men-1 {
 	background-image: url('img/men-1.png');	
+	background-size: 100% 100%;
 }
 
 .men-2 {
 	background-image: url('img/men-2.png');	
+	background-size: 100% 100%;	
 }
 
 .men-3 {
 	background-image: url('img/men-3.png');	
+	background-size: 100% 100%;	
 }
 
 .men-4 {
 	background-image: url('img/men-4.png');	
+	background-size: 100% 100%;	
+}
+
+.bc-experience-1 {
+	background-color: #e72b78;
+}
+
+.bc-experience-2 {
+	background-color: #f9b000;
+}
+
+.bc-experience-3 {
+	background-color: #2ca5de;
+}
+
+.experience-1 {
+	background-image: url('img/experience-1.png');
+	background-size: cover;
+	margin: 0 50px;
+}
+
+.experience-2 {
+	background-image: url('img/experience-2.png');
+	background-size: cover;
+	margin: 0 50px;
+}
+
+.experience-3 {
+	background-image: url('img/experience-3.png');
+	background-size: cover;
+	margin: 0 50px;
+}
+
+.content-btn-buy {
+	text-align: center;
+	margin: 0 50px;
+}
+
+.btn-buy {
+	padding: 6px 20px;
+	color: #fff;
+	font-weight: bold;
+	text-transform: uppercase;
+	border-radius: 0;
+	font-size: 26px;
+	width: 100%;
+}
+
+/* modal */ 
+.modal-benefiets .modal-content {
+	border: 0;
+	border-radius: 0;
+	background-color: transparent;
+}
+
+.modal-benefiets .modal-content .modal-header {
+	display: block;
+	text-align: right;
+	padding: 10px;
+	position: absolute;
+	right: 0;
+	z-index: 9;
+}
+
+.modal-benefiets .modal-content .modal-header .btn-close {
+	background-color: transparent;
+	padding: 0;
+}
+
+.modal-benefiets .modal-content .content-banner {
+	background-image: url('img/banner-modal.png');
+}
+
+.modal-benefiets .modal-content .modal-footer {
+	text-align: center;
+	display: block;
+}
+
+.modal-benefiets .modal-content .modal-footer .btn-buy-modal {
+	padding: 6px 20px;
+	color: #fff;
+	font-weight: bold;
+	text-transform: uppercase;
+	border-radius: 0;
+	font-size: 18px;
 }
 
 @media (max-width: 767px) {
@@ -221,6 +339,34 @@ body {
 		margin-bottom: 20px;
 		font-size: 14px;
 	}
+
+	/* Page experience*/
+
+	.content-men-experience .content-category .content-list {
+		display: none;
+	}
+
+	.content-men-experience {
+		height: 200px;
+		margin-bottom: 15px !important;
+	}
+
+	.experience-1 {
+		background-image: url('img/experience-1-mobile.png');		
+	}
+
+	.btn-buy {
+		font-size: 14px;
+		margin-bottom: 20px;
+	}
+
+	.content-men-experience .content-category .category {
+		font-size: 50px;
+	}
+
+	.modal-benefiets .modal-content .modal-header .btn-close img {
+		width: 20px;
+	}
 }
 
 /* Version Tablet */
@@ -266,6 +412,17 @@ body {
 	.content-men .content-btn .btn-details {
 		margin-bottom: 20px;
 		font-size: 14px;
+	}
+
+	/* page experiencia*/
+	.content-men-experience {
+		margin: 0;
+	}
+	.content-men-experience .content-category .category {
+		font-size: 50px;
+	}
+	.content-btn-buy {
+		margin: 0;
 	}
 }
 
