--- a/main.css
+++ b/main.css
@@ -1,3 +1,133 @@
+.body {
+	background-color: #f09f21;
+	height: 100vh;
+	color: #fff;
+	background-image: url('img/banner.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+@font-face {
+	font-family: "Archer";
+	src: url("fonts/Archer-Book-pro.otf");
+}
+
+@font-face {
+	font-family: "Bebas Neue";
+	src: url("fonts/BebasNeue-Bold.otf");
+}
+
+.font-weight-bold {
+	font-weight: bold;
+}
+
+.title {
+	padding: 50px 0px 50px 50px;
+}
+
+.sub-title {
+	margin-left: 50px;
+	padding-top: 50px;
+}
+
+.sub-title p {
+	font-size: 27px;
+	line-height: 28px;
+	color: #ffffff;
+	font-family: "Archer";
+	font-weight: bold;
+	max-width: 70%;
+	display: inline-block;
+	text-align: left;
+}
+
+.signature {
+	padding-top: 40px;
+}
+
+.signature h4 {
+	font-size: 36px;
+	letter-spacing: -1px;
+	line-height: 34px;
+	color: #ffffff;
+	font-family: "Bebas Neue";
+	font-weight: 700;
+	text-align: right;
+}
+
+.signature h6 {
+	font-size: 10px;
+	line-height: 10px;
+	color: #ffffff;
+	font-family: "Archer";
+	text-align: right;
+	text-transform: uppercase;
+}
+
+.content-form {
+	background-color: #16d098;
+	margin: 20px 0;
+}
+
+.content-form .form {
+	padding: 40px;
+}
+
+.content-form .form p {
+	font-size: 13px;
+	line-height: 15px;
+	font-family: "Avenir";
+	font-weight: 800;
+	text-align: center;
+	margin: 20px 0;
+}
+
+.content-form .form input {
+	margin-bottom: 25px;
+}
+
+.content-form .form .group-input {
+	margin-bottom: 30px;
+}
+
+.content-form .form .content-btn {
+	text-align: right;
+}
+
+.content-form .form .content-btn .btn-send {
+	width: 50%;
+	background-color: #f09f21;
+	color: #fff;
+}
+
+.content-form .form .content-logo-form .content-logo {
+	display: inline-block;
+	width: 48%;
+}
+
+.content-form .form .content-logo-form .content-logo.border-r {
+	border-right: 1px solid #f09f21;
+}
+
+.content-form .form .content-text-logo {
+	margin-bottom: 50px;
+}
+
+.content-form .form .content-btns {
+	text-align: center;
+	max-width: 60%;
+	margin: 0 auto;
+}
+
+.content-form .form .content-btns .btn {
+	text-transform: uppercase;
+	width: 100%;
+	background-color: #f09f21;
+	font-size: 10px;
+	color: #fff;
+	margin-bottom: 20px;
+	padding: 10px 20px;
+}
+
 body {
 	background-color: #000;
 }
@@ -120,6 +250,7 @@ body {
 	font-weight: normal;
 	margin-bottom: 0;
 	margin-top: 15px;
+	font-family: "Archer";
 }
 
 .content-men, .content-men-experience {
@@ -153,6 +284,10 @@ body {
 	width: 100%;
 }
 
+.content-list h3 {
+	font-family: "Bebas Neue";
+}
+
 .content-list ul {
 	padding: 0;
 	list-style: none;
@@ -172,6 +307,7 @@ body {
 	font-size: 100px;
 	color: #fff;
 	text-transform: uppercase;
+	font-family: "Bebas Neue";
 }
 
 .men-1 {
@@ -237,6 +373,7 @@ body {
 	border-radius: 0;
 	font-size: 26px;
 	width: 100%;
+	font-family: "Bebas Neue";
 }
 
 /* modal */ 
@@ -278,7 +415,93 @@ body {
 	font-size: 18px;
 }
 
+/* Carousel*/
+
+.carousel.slide {
+	padding: 0 50px;
+}
+.carousel-control-prev {
+	width: 8%;
+	padding-right: 60px;
+}
+
+.carousel-control-next {
+	width: 8%;
+	padding-left: 60px;
+}
+
+.carousel-control-prev-icon {
+	background-image: none;
+	width: 0; 
+	height: 0; 
+	border-top: 20px solid transparent;
+	border-bottom: 20px solid transparent;	
+	border-right: 20px solid #c72e75;
+}
+
+.carousel-control-next-icon {
+	background-image: none;
+	width: 0;
+	height: 0;
+  	border-top: 20px solid transparent;
+  	border-bottom: 20px solid transparent;
+  	border-left: 20px solid #c72e75;
+}
+
+.show-mobile {
+	display: none;
+}
+
 @media (max-width: 767px) {
+	.show-mobile {
+		display: flex;
+	}
+	.body {
+		height: auto;
+	}
+	.title {
+		padding: 15px;
+	}
+
+	.title h2 {
+		font-size: 16px;
+	}
+
+	.sub-title {
+		padding-top: 0;
+	}
+
+	.sub-title p {
+		font-size: 14px;
+		line-height: 20px;
+		max-width: 80%;
+	}
+
+	.signature {
+		padding-top: 0;
+	}
+
+	.signature h4 {
+		font-size: 18px;
+		margin-bottom: 0;
+	}
+
+	.signature h6 {
+		margin-top: 0;
+		font-size: 10px;
+	}
+
+	.content-form .form {
+		padding: 20px;
+	}
+
+	.content-form .form p {
+		font-size: 10px;
+	}
+
+	.carousel.slide {
+		display: none;
+	}
 	.mt-50 {
 		margin-top: 50px;
 	}
@@ -317,7 +540,7 @@ body {
 	}
 
 	.content-men {
-		height: 260px;
+		height: 185px;
 	}
 
 	.men-1 {
@@ -337,7 +560,9 @@ body {
 	}
 	.content-men .content-btn .btn-details {
 		margin-bottom: 20px;
-		font-size: 14px;
+		font-size: 8px;
+		margin-left: 15px;
+		margin-right: 15px;
 	}
 
 	/* Page experience*/
@@ -371,6 +596,24 @@ body {
 
 /* Version Tablet */
 @media (min-width: 768px) and (max-width: 1023px) {
+	.mt-50 {
+		margin-top: 50px;
+	}
+	.carousel.slide {
+		display: none;
+	}
+	.show-mobile {
+		display: flex;
+	}
+	.content-form .form .content-logo-form .content-logo {
+		display: block;
+		width: 100%;
+		text-align: center;
+	}
+	.content-form .form .content-logo-form .content-logo.border-r {
+		border: 0;
+		margin-bottom: 10px;
+	}
 	
 	.navbar .navbar-collapse .custom-navbar-nav li {
 		display: block;
