--- a/main.css
+++ b/main.css
@@ -318,6 +318,7 @@ body {
     align-items: center;
     height: 100%;
     justify-content: center;
+    cursor: pointer;
 }
 
 .content-list {
@@ -340,8 +341,8 @@ body {
 }
 
 .content-list ul li img {
-	width: 13px;
-	height: 13px;
+	width: 20px;
+	height: 20px;
 }
 
 .content-men .content-category .category, .content-men-experience .content-category .category {
@@ -417,6 +418,10 @@ body {
 	font-family: "Bebas Neue";
 }
 
+ .btn-buy:hover {
+ 	color: #fff;
+ }
+
 /* modal */ 
 .modal-benefiets .modal-content {
 	border: 0;
@@ -438,9 +443,18 @@ body {
 	padding: 0;
 }
 
-.modal-benefiets .modal-content .content-banner {
+.modal-benefiets.modal-oro .modal-content .content-banner {
 	background-image: url('img/banner-modal.png');
 }
+
+.modal-benefiets.modal-vip .modal-content .content-banner {
+	background-color: #e72b78;
+}
+
+.modal-benefiets.modal-plata .modal-content .content-banner {
+	background-color: #2ca5de;
+}
+
 
 .modal-benefiets .modal-content .modal-footer {
 	text-align: center;
@@ -666,7 +680,7 @@ body {
 	}
 	/* modal*/
 
-	.modal-open .modal, .modal-backdrop.show{
+	.modal-open .modal.show, .modal-backdrop.show{
 		display: block !important;
 	}
 }
